--- a/Scripts/responses_rev_gcb.Rmd
+++ b/Scripts/responses_rev_gcb.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Response to Reviewers"
 output:
-  word_document: default
+  # word_document: default
   pdf_document: default
 ---
 
@@ -9,20 +9,25 @@ output:
 
 Overall, the two reviewers agree that this work tackles an important, but collectively have raised a considerable number of points that will need to be addressed. Of most concern, is that it is not currently clear how this current MS differs from other recent papers that have established methods used on this paper and implications of climate change in the context of transboundary fisheries - including the authors' one works (Sumaila et al. 2020 Ecology and Society, Palacios-Abrantes et al. 2020 Ecology and Society, Pinsky et al. 2018 Science, and Palacios-Abrantes et al. 2020 Scientific Reports). It is important that GCB papers deliver the step change in knowledge that has not been realised elsewhere; therefore' we ask the authors to ensure the paper wholly demonstrates and articulates the transformation achieved in order to progress with the submission.
 
-- **Response: PLEASE PAY SPECIAL ATTENTION TO THIS POINT. LOOKS LIKE WE REALLY NEED TO CONVINCE THE EDITOR OUR RESEARCH IS NOVEL** Below you will find the response to both Reviewers 1 and 2. In addition, we would like to offer here an explanation of how our paper differs from recent published papers, including those authored by some of us.
+- **Response**: Below you will find the response to both Reviewers 1 and 2. In addition, we would like to offer here an explanation of how our paper differs from recent published papers, including those authored by some of us.
 
-  In their 2018 paper, Pinsky *et al.* look at how many *new* transboundary species each EEZ of the world will have towards the end of the century under climate change (i.e., national stocks that become transboundary stocks). Indeed, the authors find that “many of the world’s EEZs are likely to receive one to 12 new, climate-driven transboundary stocks by the end of the century.” On the other hand, Oremus *et al.* (2020) “estimates the number of species *exiting* national jurisdictions under climate change up to 2100” concluding that tropical nations stand to lose the most species under these scenarios. However, both studies fail to identify changes in *current* transboundary stocks including the intensity of such shift, gap that we look to fill in this paper. Here, we build from Palacios-Abrantes *et al.* (2020) and use the transboundary species (n = 633) identified in such paper. This means that, unlike Pinsky *et al.* (2018) and Oremus *et al.* (2020) who look at national stocks shifting towards new or away from EEZs, our paper focuses on transboundary stocks shifting within EEZs. Moreover, as far as we are concerned no other study, including the research done by us, identifies the actual timeline of shifts in shared stocks, nor the intensity of such shifts.
+  We understand the Editor’s concern as all of these papers look at the consequences of climate change for shared stocks. We have stated the differences between our study and those previously made in the introduction (see below). In short, our manuscript critically builds on the previous studies highlighted, using the species identified by Palacios-Abrantes et al. (2020) *Scientific Reports* and combining methods developed in Sumaila et al. (2020) and Palacios-Abrantes et al. (2020) *Ecology and Society* to address the questions of what is the timeline and intensity of changes in the distribution of current transboundary stocks at the global level? A question that neither Pinsky et al. (2018) *Science* nor Oremus et al. (2020) *Nature Sust*. addressed. Please note that we offer a longer explanation of these differences after the in-text statements. We hope to have clarified the novelty of our research and how it differs from previous studies. The new information that we present here can be critical for fisheries management as it offers tangible reference points at country level around which to consider future climate change impacts and to inform discussions, for instance, around agreements that are relevant to shared stocks.
+  
+   - Line XX, introduction:  *Recent studies have looked at global gains (Pinsky et. al., 2018) and losses (Oremus et al., 2020) of transboundary stocks within the world’s EEZs as well as regional sharing dynamics between neighbouring countries (Palacios-Abrantes et al., 2020, Sumaila et al., 2020) by the end of the century due to climate change. However, previous studies failed to identify both changes in the distribution of current transboundary stocks at the global level including the actual timeline of shifts in shared stocks and the intensity of such shifts.*
+     
+  - Line XX, introduction: *We base our analysis on the 633 transboundary species identified by Palacios-Abrantes (2020), defining a ‘stock’ unit as each time a transboundary species is shared by neighboring EEZs.*
 
-  To identify the timeline we adopt the concept of *Time of Emergence* commonly used in oceanic physical and chemical studies (See Rodgers *et al.* 2015, Keller *et al.* 2014 and has just recently been used in ecological studies by Cheung *et al.* 2020 looking at ecological responses to marine heatwaves. As far as we are concerned, no other study has adopted this methodology to look at the timing of shifts in transboundary fisheries. On the other hand, to identify the intensity of the shift, we (partially) used methods developed by Palacios *et al.* and Sumaila *et al* (2020), published in *Ecology and society*. These papers adopt the concept of threat point to evaluate the resilience of specific treaties celebrated by Canada-US transboundary to manage four transboundary stocks. Here, we take this idea of threat point and expand the analysis globally to estimate the intensity that the shifts in transboundary stocks will have. 
-
-  In short, our manuscript builds upon Palacios-Abrantes *et al.* 2020 *Scientific Reports* combining methods developed in Sumaila *et al.* 2020 and Palacios-Abrantes *et al.* 2020 *Ecology and Society* to address a question that neither Pinsky *et al.* 2018 *Science* nor Oremus *et al.* (2020) *Nature Sust.* addressed. We hope to have clarified the novelty of our research and how it differs from previous studies. The new information that we present here can be critical for fisheries management to adapt to shifts in the distribution of transboundary stocks under climate change as highlighted by both reviewers.
+  
+  In their 2018 paper, Pinsky et al. look at how many new transboundary species will enter each EEZ of the world towards the end of the century under climate change (i.e., national stocks that become transboundary stocks). The authors find that “many of the world’s EEZs are likely to receive one to 12 new, climate-driven transboundary stocks by the end of the century.” On the other hand, Oremus et al. (2020) “estimate the number of species exiting national jurisdictions under climate change up to 2100” concluding that tropical nations stand to lose the most species. Both studies do not identify changes in current transboundary stocks, including the intensity of such shifts, an important knowledge gap that we aim to close in this paper. Here, we build from Palacios-Abrantes et al. (2020) and use the existing no. of transboundary species (n = 633) identified in that earlier paper. This means that, unlike Pinsky et al. (2018) and Oremus et al. (2020) that focus their study on the gaining of new stocks in a EEZ from expansion of distribution of national stocks from other EEZs, or losses of existing stocks from range contraction,  our paper examines the shifts of transboundary stocks  between EEZs that are already sharing the stocks now. These different types of shifts in transboundary stocks are causing different types of impacts on fisheries and would require different sets of adaptation responses [@Pinsky:2014by]. We also identify the timeline of shifts in shared stocks and the intensity of such shifts, which is not explored in previous studies. 
+  
+To identify the timeline of shifts we adopt the concept of “Time of Emergence” commonly used in oceanic physical and chemical studies (see for example in Rodgers et al. 2015 or Keller et al. 2014), and has just recently been used in ecological studies by Cheung et al. -[@Cheung:2020ja] looking at ecological responses to marine heatwaves and Trisos et al [-@trisos_projected_2020] looking at the timing of species’ exposure to potentially dangerous climate conditions. The “Time of Emergence” is generally defined in the literature as the time when the increase in intensity of the signal exceeds the noise (Bindoff et al. 2019). To our knowledge, no other study has adopted this methodology to look at the time of emergence of shifts in transboundary fisheries. Moreover, to identify the intensity of the shift, we (partially) used methods developed by Palacios et al. (2020) Scientific Reports and Sumaila et al (2020), published in Ecology and society. These papers adopt the concept of threat point to evaluate the resilience of specific treaties celebrated by Canada-US transboundary to manage four transboundary stocks. Here, we further develop this method to apply the concept of threat point to the Stock Share Ratio estimation while expanding the analysis globally to estimate the intensity that the shifts in transboundary stocks will have as well as their time of emergence.
 
 # Reviewer 1
 
 Comments to the Author
 In this work, the authors analyze potential shifts in harvested marine species under climate change, in relation to their distribution across neighboring exclusive economic zones. They find that many countries will experience shifting species, and investigate how the number and intensity of transboundary shifts will vary by species type. Overall, I find the authors take an interesting approach to the analysis of transboundary fish populations under climate change, and the Discussion of potential management implications is strong, in my opinion. However, I think the manuscript needs some significant clarifications and edits before it can be published. In the space below, I outline my major comments, followed by more specific and/or minor comments, accompanied by line numbers from the draft pdf.
 
-- **Response:** We are glad that the reviewer found our manuscript to be interesting. We have revised the manuscript paying special attention to clarifying the parts the reviewer flagged. We thank the reviewer for his/her comments as they have strengthened our paper. Please find below direct responses to the reviewer's comments. 
+- **Response:** We are glad that the reviewer found our manuscript interesting. We have revised the manuscript paying special attention to clarifying the parts the reviewer flagged. We thank the reviewer for his/her comments as they have strengthened our paper. Please find below direct responses to the reviewer’s comments.
 
 ## Major comments:
 I am concerned about the lack of a clear definition of “fish stock” in this manuscript, since it is absolutely central to the analysis. I cannot find where in the manuscript the definition of stocks is laid out. In most literature (and especially in fisheries science), stocks have a specific (if flexible) definition as populations of a species with some degree of demographic isolation from other stocks, such that the population dynamics of separate stocks may be considered independent. In this manuscript, it seems that instead, a transboundary stock is simply defined as any pair of EEZs that share a species distribution. I would recommend that the authors define the precise definition of fish stock explicitly within the manuscript, including how their definition is different from the definition in other, related literature.
@@ -39,13 +44,14 @@ I have a number of questions and concerns about this approach to stock definitio
 
   How are neighboring stocks of the same species considered? If, for example, a species’ distribution exists within British Columbia, the United States, and Mexico, is this considered one stock for the purpose of the analyses in the paper (e.g. TI, ToE, SSR), or is this two stocks (one between Canada and the US and one between the US and Mexico)?
 
-- **Response:** We acknowledged that this was not fully clear in the previous version of the manuscript and have work towards improving clarity in the revise manuscript. For example, pacific sardine is a species present along the coast of Mexico, the United States (US) and, sometimes, British Columbia (BC) [@cisneros-montemayor_ecosystem-based_2020]. For the purpose of our study, we define two stocks: One that is shared by Mexico and the US and one shared by the US and BC. We have made this explicit in the following section of the methods, hopefully clarifying our definition;
+- **Response:** We acknowledged that this was not fully clear in the previous version of the manuscript. We have improved the clarity of the definition of the stock unit in the revised manuscript. Specifically, in considering “neighboring stocks of the same species”, for example, Pacific sardine is a species that is present along the coast of Mexico, the United States (US) and, sometimes, British Columbia (BC) [@cisneros-montemayor_ecosystem-based_2020]. For the purpose of our study, we define two stocks: One that is shared by Mexico and the US and one shared by the US and BC. We have made this explicit in the following section of the methods to clarify our definition;
+
 
   - Methods Line XX, *Let us consider the transboundary species Atlantic cod (Gadus morhua) as an example. Atlantic cod's distribution in the Northwest Atlantic ranges from the United States to Greenland. Based on the previous definition of a transboundary stock, the United States and Canada share a stock of Atlantic cod, and Canada and Greenland share a separate stock of Atlantic cod, but the United States and Greenland do not share a stock as they do not have juxtaposing EEZs.*
     
     How does the choice of stock definition influence the calculation of SSR? Given the same sample as above, can the US lose SSR of one stock of a species to Canada, while gaining SSR of the same species from Mexico?
     
-- **Response:** Our definition will influence the calculation of SSR *between* neighboring EEZs (i.e., Mexico and the US SSR for sardine and US and BC SSR for sardine, independently one of another). As the reviewer suggests, in this scenario Mexico could be loosing sardine SSR to the US contiguous states (this can also be seen as the US gaining SSR from Mexico), while the US contiguous states looses sardine SSR to BC (again, this could also be seen as Canada winning SSR from the US contiguous states). This effect is appreciable in the average SSR gains of Figure 5 where Mexico losses to the US contiguous states, who in turn looses to BC, who actually gains from both US continuous states and Alaska. This is now explained on the methods as follows **NOT SURE WE NEED THIS**;
+- **Response:** Our definition will influence the calculation of SSR between neighboring EEZs (i.e., Mexico and the US SSR for sardine and US and BC SSR for sardine, independently one of another). As the reviewer suggests, in this scenario Mexico could be losing sardine SSR to the US contiguous states (this can also be seen as the US gaining SSR from Mexico), while the US contiguous states loses sardine SSR to BC (again, this could also be seen as Canada winning SSR from the US contiguous states). This is now explained on the methods as follows: 
 
     - Line XX, *While this means that a shift in the stocks could happened from the US to Canada and from Canada to Greenland, such shift could not (analytically) go directly from the US to Greenland*
 
@@ -53,20 +59,16 @@ I have a number of questions and concerns about this approach to stock definitio
     
 - **Response:** The definition of "stock" will likely influence the results as it is a fundamental part of the analysis. Replicating this analysis at the species level will undoubtedly result in multiple countries sharing each species. For example, in the case of Atlantic Cod, this would be shared by US, Canada and Greenland (and maybe even northern Europe). Choosing this approach invariably comes with the assumption that fishing Cod in, e.g., the Gulf of Maine, will have direct impact on e.g., Greenland fisheries. While this might be true for some few highly migratory species (e.g., tunas) we believe is a stretch for all other species in this analysis. 
   
-  However, even when a stock of non highly-migratory species does span along the coast of more than two countries, our results seem to be similar (this relates to the part regarding Mexico US and Canada). For example, Pacific halibut (*Hippoglossus stenolepis*) is considered to be one single stock that extends along the Pacific coast of the US contiguous states, Canada, and Alaska [@iphc_iphc_2016_report_2016]. Palacios-Abrantes *et al.* (2020) analyzed the shift in SSR between the three parties and found that the US contiguous states will likely loose SSR to Canada while Canada will loose to Alaska. A similar patter shown in the present study.
-  
-    Ideally, one could define a stock as a biologically-defined population. This could be the case of Peruvian anchoveta *(Engraulis ringens)* off the coast of Chile and Peru. There are two identified stocks of anchoveta; one in the central/norther part of the Peruvian EEZ and one in the south, shared with Chile. This differentiation will likely impact both the ToE and SSR results. However, as far as we are concern, such analysis is challenged by a lack of stock-level data around the world. 
-
 The above are just example situations. I do not mean to be nitpicky about definitions, but I am concerned that the definition of stocks used in this manuscript fundamentally determine the top-line results (e.g., number and proportion of shifting stocks, calculation of the transboundary index and time of emergence, loss or gain of SSR, etc. etc.).
 
-  - **Response:** We understand the reviewer's concern and hope that our responses have clarified this issue. However, it is almost certain that our definition of stock is influencing the results of our paper, just by that nature of the analysis. While a more fine scale definition (e.g., biologically-defined populations of stock will probably arose other results, not limiting the species to, at least, an EEZ could result in an overestimation of our results (See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118). This is a main caveat of our study and have made an effort to be very clear and upfront about it in line XX of the revised manuscript:
+  - **Response:** We understand the reviewer’s concern and hope that our responses have clarified our choice of the definition. In addition, in the revised manuscript, we have explained the implications of our choice of the definition of stock unit on our findings and conclusions. (line XX of the revised manuscript):
   
-  - - **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, not limiting the species to, at least, an EEZ could result in an overestimation of our results (**NOTE:** See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).**
+    - **Another important source of uncertainty in this study is the utilization of political boundaries (EEZ) to define stocks, rather than biologically-defined populations. While this method might define some stocks that do not necessarily align with biologically-defined sub-populations within an EEZ, in many EEZs, fisheries are often managed at the species level [@MAP:2017uf] and sub-populations are potentially interconnected [@Ramesh:2019va], thus, providing additional ecological ground for our analysis [@Dunn:2019ca]. Moreover, not limiting the species to, at least, an EEZ could result in an overestimation of our results (**NOTE:** See Ovando *et al.* https://www.pnas.org/content/118/23/e2025958118).**
   
 Further, I am concerned about the averaging and weighting of species that is done across species in this analysis. As one example, why is the geographic centroid (used in the calculation of TI) not weighted by probability of occurrence? Fish stocks are not evenly distributed across their entire range, and un-weighted centroids can severely skew the actual distribution of the species. 
 
-- **Response:** We agree with the reviewer that an un-weighted centroid can severely skew the actual distribution of the species and influence our results. We have revised the manuscript to clarify that we did account for the heterogeneous distribution of fish stocks across their entire range. Specifically, the geographic centroid of each stock is indeed weighted by the abundance of the stock. The DBEM uses the species probability of occurrence to estimate the biomass of the species at each 0.5 x 0.5 gridcell as indicated from lines XX to XX of the methods. The centroid of a transboundary stock was determined by the average latitude and longitude ($lon_{ts}$) of the grid cells holding the specified percentile ($per^{th}$) of the projected transboundary stock abundance (see below). This is, we determined the centroid of the stock using only those regions where abundance was higher (i.e., using the probability of occurrence of the DBEM). Moreover, we estimated the sensitivity of our results to the (arbitrarily) $per^{th} = 95^{th}$ percentile threshold as described in lines XX and shown in Figure S6 of the supplements. It reads as follows in line XX:
-
+- **Response:** We agree with the reviewer that an un-weighted centroid can severely skew the actual distribution of the species and influence our results. We clarified in the manuscript that we did account for the heterogeneous distribution of fish stocks across their entire range. Specifically, the geographic centroid of each stock is indeed weighted by the abundance of the stock. The DBEM uses the species probability of occurrence to estimate the biomass of the species at each 0.5 x 0.5 gridcell as indicated from lines XX to XX of the methods. The centroid of a transboundary stock was determined by the average latitude and longitude ($lon_{ts}$) of the grid cells holding the specified percentile  ($per^{th}$)  of the projected transboundary stock abundance (see below). Thus, we determined the centroid of the stock using only those regions where abundance was higher (i.e., using the probability of occurrence of the DBEM). Moreover, we estimated the sensitivity of our results to the (arbitrarily) percentile threshold $per^{th} = 95^{th}$ as described in lines XX and shown in Figure S6 of the supplements. It reads as follows in line XX:
+ 
   - Line XX, *Fish stocks are not evenly distributed across their entire range, thus we focus on areas where transboundary stocks are more abundant and fishing activities are more likely to take place. Thus, we estimated the centroid of a stock only including grid cells where the projected stock abundance within the neighboring EEZs sharing the stock was above the $95^{th}$ percentile.*
 
 Weighting comes up again in the analyses that result in Figures 3, 4, and 5. Having one major, valuable species shift rapidly is a much bigger concern for many countries than having many small or low-value stocks shift slowly. These sorts of dynamics, while interesting, are difficult if not impossible to parse from the current Figures. For example, would the arrows look different in Figure 5 if the averages were weighted by each fish stock’s value?
