Created equation table

--- a/Scripts/Supplements.Rmd
+++ b/Scripts/Supplements.Rmd
@@ -170,6 +170,124 @@ tibble(
 
 ```
 
+```{r}
+library(tidyverse)
+library(knitr)
+
+data.frame(
+   "Acronym" = c(
+     "Hs",
+     "_i_",
+     "_T_",
+     "TPP",
+     "B$\\alpha$~i~",
+     "Min~D~",
+     "Max~D~",
+     "Hab~ij~",
+     "_u_",
+     "Hab~Assoc~",
+     "Sal",
+     "Sal~Assoc~",
+     "Ice",
+     "Ice~p~",
+     "A~i~",
+     "_G_",
+     "L~ji~",
+     "Ad~ji~",
+     "_j_",
+     "_r_",
+     "_K_",
+     "_f_",
+     "lat~ts~",
+     "lat~per~",
+     "lon~ts~",
+     "lon~per~",
+     "$\\mu$",
+     "per^th^",
+     "D~ens~",
+     "lat~EEZ~",
+     "lat~ts~",
+     "lon~EEZ~",
+     "lon~ts~",
+     "TSI",
+     "D~A~",
+     "D~B~",
+     "sd",
+     "t",
+     "th",
+     "ToE",
+     "TSI~$\\mu$~",
+     "TSI~f$\\mu$~",
+     "TSI~$\\omega$~",
+     "_t'_",
+     "tresh",
+     "ToE",
+     "SSR~th~",
+     "SSR~te~",
+     "SSR~tm~",
+     "SSR~tf~",
+     "_s_"
+     
+
+     ),
+   "Meaning" = c(
+     "Habitat suitability",
+     "Grid-cell of 0.5^o^ latitude x 0.5^p^ longitude",
+     "Seawater temperature",
+     "Species temperature profile",
+     "Bathymetry",
+     "Species' minimum depth limit",
+     "Species' maximum depth limit",
+     "Proportion of area of the habitat type",
+     "Habitat type",
+     "Habitat association index",
+     "Salinity",
+     "Salinity association index",
+     "Sea ice extent",
+     "Association to sea ice",
+     "Relative abundance of a given species in each grid-cell _i_",
+     "Intrinsic population growth",
+     "Number of settled larvae",
+     "Net migrated adults from surrounding cells _j_",
+     "Surrounding grid-cell",
+     "Intrinsic rate of population increase",
+     "Carrying capacity of grid-cell _i_",
+     "Fishing mortality",
+     "Average latitude across the high-abundance grid-cells",
+     "Latitude of grid-cells holding a given percentile of projected abundance",
+     "Average longitude across the high-abundance grid-cells",
+     "Longitude of grid-cells holding a given percentile of projected abundance",
+     "Mean",
+     "Percentile of projected transboundary stock abundance",
+     "Distance between the centroid of the EEZs and the centroid of the transboundary stock",
+     "Latitude of the EEZ's centroid",
+     "Latitude of the transboundary stock's centroid",
+     "Longitude of the EEZ's centroid",
+     "Longitude of the transboundary stock's centroid",
+     "Transboundary Stock Index",
+     "Distance between the distribution centroids of a stock and the centroid of the neighboring EEZs A",
+     "Distance between the distribution centroids of a stock and the centroid of the neighboring EEZs B",
+     "Standard deviation",
+     "Time step from 1951 to 2006",
+     "Historical time period (1951 to 2005)",
+     "Time of emergence",
+     "Average TSI from 1951 to 2005",
+     "Average TSI from 2006 to 2100",
+     "Standard deviation of TSI from 1951 to 2005",
+     "Years from 2006 to 2100",
+     "Threshold to determine the time of emergence",
+     "Year when TSI~f$\\mu$~ overpasses the _tresh_",
+     "Stocks share ratio over the historical time period (1951 to 2005)",
+     "Stocks share ratio at the early time period (2020 to 2040)",
+     "Stocks share ratio at the late time period (2050 to 2060)",
+     "Stocks share ratio at the early or late time period",
+     "Stock whose share ratio exceeded the threat point of an EEZ"
+   )
+) %>% 
+  kable()
+```
+
+
 \clearpage
 
 ```{r toeTableS3, eval = T, echo = F}
